--- a/huskysheetsui/src/css/HomePage.css
+++ b/huskysheetsui/src/css/HomePage.css
@@ -103,3 +103,21 @@
     margin-top: 20px;
   }
   
+
+  .logout-button {
+    background-color: #f44336; /* Red */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+  
+  .logout-button:hover {
+    background-color: #d32f2f; /* Darker red */
+  }
