Added ownership to methods

--- a/huskysheetsui/src/css/HomePage.css
+++ b/huskysheetsui/src/css/HomePage.css
@@ -1,5 +1,5 @@
-/* HomePage.css */
- /*@author : Shaanpatel1213*/
+
+/** @author : Shaanpatel1213*/
 .homepage-container {
     display: flex;
     flex-direction: column;
