--- a/huskysheetsui/src/css/Spreadsheet.css
+++ b/huskysheetsui/src/css/Spreadsheet.css
@@ -1,5 +1,5 @@
-/* src/Spreadsheet.css */
-/* Ownership : Shaanpatel1213 */
+
+/** @author Shaanpatel1213 */
 html, body {
   height: 100%;
   margin: 0;
