--- a/huskysheetsui/src/css/login.css
+++ b/huskysheetsui/src/css/login.css
@@ -1,5 +1,5 @@
-/* src/Login.css */
-/*@author : Shaanpatel1213 */
+
+/** @author : Shaanpatel1213 */
 .login-container {
     max-width: 400px;
     margin: 50px auto;
